# blackjack_ai

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  agents.cpp  agents.hpp  environment.cpp  environment.hpp  environment_unittest.cc  function.cpp  function.hpp  function_unittest.cc  game_assets.cpp  game_assets.hpp  game_assets_unittest.cc  hello_test.cc  main.cpp  passiveagent  state_action_function.cpp  state_action_function.hpp  state_function.hpp
data_visualisation/: data.py  info.txt  q-action-values.txt  q-values.txt
data_visualisation/initial_data/: q-action-values.txt
temp/: main
